<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SAFrameworkActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_open_dir"
            style="@style/StandarAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/px12"
            android:text="@string/action_open_document_tree" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px12" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_open_file"
            style="@style/StandarAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dip"
            android:text="@string/action_open_document" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_create_file"
            style="@style/StandarAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dip"
            android:text="@string/action_create_document" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_action_pick"
            style="@style/StandarAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dip"
            android:text="@string/action_pick" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_get_content"
            style="@style/StandarAppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dip"
            android:text="@string/action_get_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px12"
            android:layout_marginBottom="@dimen/px12"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_open_file">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVolume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_open_dir" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_uri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px12"
                android:textSize="14sp"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px12"
                android:textSize="14sp"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_preview"
                android:layout_width="@dimen/px150"
                android:layout_height="@dimen/px150"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/px12"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px12"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/px8"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackground"
                    android:padding="@dimen/px8"
                    android:src="@drawable/ic_baseline_delete_24" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/px8"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackground"
                    android:padding="@dimen/px8"
                    android:src="@drawable/ic_sharp_share_24" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_rename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/px8"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackground"
                    android:padding="@dimen/px8"
                    android:src="@drawable/ic_baseline_edit_24" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackground"
                    android:padding="@dimen/px8"
                    android:src="@drawable/ic_baseline_arrow_right_24" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>